<resources>
    <string name="app_name">Cash Wallet</string>
    <string name="register_big">REGISTER</string>
    <string name="sign_in_big">SIGN IN</string>
    <string name="cancel_big">CANCEL</string>
    <string name="enter_email">Enter email:</string>
    <string name="enter_password">Enter password:</string>
    <string name="sign_in_dialog">SIGN IN DIALOG</string>
    <string name="enter_nickname">Enter nickname:</string>
    <string name="home">Home</string>
    <string name="accounts">Accounts</string>
    <string name="stats">Statistics</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="remember_password">Remember password</string>
    <string name="menu_home">Home</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_stats">Statistics</string>
    <string name="all_accounts">All Accounts</string>
    <string name="add_big">ADD</string>
    <string name="add_event">Add Event</string>
</resources>
