<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:text="@string/all_accounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/type"
            android:textColor="#fff"
            android:maxLines="1"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:background="#383838"
        android:layout_below="@id/toolbar"/>

    <!-- the layout which will contain (host) the drawerLayout -->
    <FrameLayout
        android:id="@+id/drawer_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@+id/bottom_navigation">

        <!-- the layout which will be the content of the activity (which will be hosted inside the drawer (NOT the list of the drawer)) -->
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="96dp">

        </FrameLayout>
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/menu"
        android:layout_alignParentBottom="true"
        android:background="#cfcfcf"
        android:layout_height="48dp"
        android:visibility="gone">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:id="@+id/home_button">

            <ImageView
                android:id="@+id/home_icon"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/home_2"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:text="@string/menu_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/home_caption"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:id="@+id/accounts_button">

            <ImageView
                android:id="@+id/accounts_icon"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/money_1"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:text="@string/menu_accounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accounts_caption"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:id="@+id/settings_button">

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/settings_1"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:text="@string/menu_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_caption"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>